# SFMLight

./: .gitignore  CMakeLists.txt  LICENSE  README.md  alg_test.cpp  main.cpp
cmake_modules/: FindSFMLight.cmake
examples/: CMakeLists.txt  example01.cpp  example02.cpp  example03.cpp  test.cpp
inc/: Light.h  LightScene.h  Line.h  Object.h  SFMLight.h
inc/sfl/: Config.h  Light.h  LightScene.h  Line.h  Object.h  Utils.h
src/: Light.cpp  LightScene.cpp  Line.cpp  Object.cpp
